--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   intl: ^0.19.0
   lottie: ^3.1.3
   connectivity_plus: ^6.1.0
-  shared_preferences: ^2.5.3  
+  shared_preferences: ^2.5.3 
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
