--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.NFC" />
+    
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="false" />
+    
     <application
         android:label="evconnect"
         android:name="${applicationName}"
