--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   connectivity_plus: ^6.1.0
   shared_preferences: ^2.5.3 
   http: ^1.5.0
+  nfc_manager: ^3.5.0
 
 dev_dependencies:
   flutter_test:
